--- a/css/main.css
+++ b/css/main.css
@@ -1430,10 +1430,11 @@ button {
 }
 
 .page-header1 {
-  background-image: url(../img/Teams.jpg);
+  background-image: url(../img/bannerteam.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  opacity: 90%;
   width: 100%;
   height: 400px;
   display: flex;
